infra/k8s/yaah/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yaah-api
spec:
  selector:
    app: yaah-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
