infra/k8s/yaah/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yaah-api
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/limit-rps: "10"
    nginx.ingress.kubernetes.io/limit-connections: "5"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.yaah.jwnwilson.co.uk
      secretName: yaah-api-tls
  rules:
    - host: "api.yaah.jwnwilson.co.uk"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yaah-api
                port:
                  number: 80
